fix best parts img css, fix logo svg bug on safari (#34)
- fix bug on safari where including animated svg through img tag doesn't work: https://stackoverflow.com/questions/60975613/svg-animation-struggles-with-safari-13-1-mac-os-ios
- fix css in best parts section where image overflows screen on small mobile devices
- edit logo animation to look better on firefox

--- a/page.css
+++ b/page.css
@@ -27,6 +27,12 @@
   width: 360px;
   height: 270px;
 }
+@media (max-width: 720px) {
+  .feature_tile {
+    width: 280px;
+    height: 210px;
+  }
+}
 
 /* -------------------------------------------------- */
 /* made with manubot section */
